# ds-rs

./: .debtmap.yml  .gitignore  BUGS.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  LESSONS_LEARNED.md  README.md  TECH_DEBT.md  TODO.md  codebase-review-report.md  tarpaulin-report.html
.claude/: settings.local.json
.github/workflows/: README-DEBTMAP.md  run-debtmap.yml  test-orchestration.yml
PRPs/: 00-source-videos-expansion-roadmap.md  01-core-infrastructure.md  01-fix-onnx-dll-loading.md  02-float16-model-support.md  02-gstreamer-pipeline.md  03-fix-video-playback-state.md  03-source-control-apis.md  04-deepstream-integration.md  05-main-application.md  06-hardware-abstraction.md  07-dynamic-video-sources.md  08-code-quality-production-readiness.md  09-test-orchestration-scripts.md  10-ball-detection-integration.md  11-realtime-bounding-box-rendering.md  12-multistream-detection-pipeline.md  13-detection-data-export-streaming.md  14-backend-integration.md  14-build-infrastructure-gst-parser.md  15-codegen-element-types.md  15-simplified-element-discovery.md  16-macro-runtime-integration.md  16-runtime-configuration-management.md  17-backend-integration.md  17-control-api-websocket.md  18-dynamic-source-properties.md  19-network-simulation-simplified.md  19-network-simulation.md  20-cpu-vision-backend.md  21-cpu-detection-module.md  22-cpu-tracking-module.md  23-gst-plugins-integration.md  24-onnx-integration-fix.md  25-fix-shutdown-window-race-condition.md  26-model-configuration-and-download-helpers.md  27-multi-backend-detector-trait.md  28-opencv-dnn-backend.md  29-tflite-backend.md  30-darknet-backend.md  31-advanced-tracking-algorithms.md  (+32 more)
PRPs/templates/: prp_base.md
crates/cpuinfer/: Cargo.toml  README.md  build.rs  dev-setup.md  install.ps1  install.sh
crates/cpuinfer/src/: config.rs  detector.rs  lib.rs
crates/cpuinfer/src/cpudetector/: imp.rs  mod.rs
crates/ds-rs/: Cargo.toml  build.rs
crates/ds-rs/examples/: ball_tracking_visualization.rs  cpu_detection_demo.rs  cross_platform.rs  detection_app.rs  fault_tolerant_multi_stream.rs  fault_tolerant_pipeline.rs  multi_stream_detection.rs  runtime_demo.rs
crates/ds-rs/src/: dll_validator.rs  error.rs  lib.rs  main.rs  platform.rs
crates/ds-rs/src/app/: config.rs  mod.rs  runner.rs  timers.rs
crates/ds-rs/src/backend/: deepstream.rs  detector.rs  mock.rs  mod.rs  standard.rs
crates/ds-rs/src/backend/cpu_vision/: detector.rs  elements.rs  metadata.rs  mod.rs  tracker.rs
crates/ds-rs/src/backend/cpu_vision/cpudetector/: imp.rs  mod.rs
crates/ds-rs/src/config/: mod.rs
crates/ds-rs/src/elements/: abstracted.rs  factory.rs  mod.rs
crates/ds-rs/src/error/: classification.rs  mod.rs
crates/ds-rs/src/inference/: config.rs  mod.rs
crates/ds-rs/src/messages/: mod.rs
crates/ds-rs/src/metadata/: batch.rs  frame.rs  mod.rs  object.rs
crates/ds-rs/src/multistream/: config.rs  manager.rs  metrics.rs  mod.rs  pipeline_pool.rs  resource_manager.rs  stream_coordinator.rs
crates/ds-rs/src/pipeline/: builder.rs  bus.rs  mod.rs  state.rs
crates/ds-rs/src/rendering/: config.rs  deepstream_renderer.rs  metadata_bridge.rs  mod.rs  standard_renderer.rs
crates/ds-rs/src/source/: circuit_breaker.rs  controller.rs  events.rs  fault_tolerant_controller.rs  health.rs  isolation.rs  manager.rs  mod.rs  recovery.rs  removal.rs  synchronization.rs  video_source.rs
crates/ds-rs/src/tracking/: mod.rs
crates/ds-rs/tests/: backend_tests.rs  cpu_backend_tests.rs  main_app_test.rs  multistream_tests.rs  pipeline_tests.rs  shutdown_test.rs  source_management.rs
crates/dsl/: Cargo.toml
crates/source-videos/: API.md  Cargo.toml  README.md
crates/source-videos/configuration/: default.toml
crates/source-videos/examples/: api_automation.py  api_automation.sh  batch_file_server.rs  directory_server.rs  drone_network_demo.rs  error_recovery_test.rs  live_display_automation.ps1  live_display_automation.py  live_display_automation.sh  mixed_sources.rs  network_simulation.rs  network_simulation_demo.rs  watched_directory.rs
crates/source-videos/examples/scenarios/: degrading.yaml  drone-mountain.yaml  drone-urban.yaml  rush-hour.yaml
crates/source-videos/src/: auto_repeat.rs  config.rs  config_types.rs  directory.rs  error.rs  file.rs  file_source.rs  file_utils.rs  lib.rs  main.rs  manager.rs  patterns.rs  source.rs
crates/source-videos/src/api/: auth.rs  error.rs  mod.rs  models.rs  state.rs
crates/source-videos/src/api/routes/: config.rs  health.rs  mod.rs  network.rs  operations.rs  server.rs  sources.rs
crates/source-videos/src/config/: loader.rs  mod.rs  validator.rs  watcher.rs
crates/source-videos/src/network/: gstreamer.rs  mod.rs  profiles.rs  scenarios.rs  simulator.rs
crates/source-videos/src/pipeline/: builder.rs  mod.rs
crates/source-videos/src/repl/: commands.rs  completion.rs  mod.rs  output.rs
crates/source-videos/src/rtsp/: factory.rs  mod.rs
crates/source-videos/src/runtime/: applicator.rs  differ.rs  events.rs  mod.rs  signal_handler.rs
crates/source-videos/src/watch/: events.rs  mod.rs
crates/source-videos/tests/: api_integration.rs  directory_serving_tests.rs  file_watching_tests.rs  integration_test.rs  network_recovery_test.rs  network_simulation_test.rs  rtsp_file_serving_test.rs  runtime_config_test.rs
examples/: cross_platform.rs
scripts/: README.md  debug-rtsp-start.py  requirements.txt  setup-test-environment.py  test-network-sim.py  test-orchestrator.ps1  test-orchestrator.py  test-orchestrator.sh  test-rtsp-server.py  test-subprocess.py  validate-environment.py
scripts/config/: network-inference-scenarios.toml  network-test-simple.toml  test-basic.toml  test-scenarios.json  test-scenarios.toml
scripts/integration-tests/: end-to-end-test.py
scripts/lib/: inference_metrics.py  network_controller.py  test-helpers.ps1  test_helpers.py
src/: error.rs  lib.rs  main.rs
src/backend/: deepstream.rs  detector.rs  mock.rs  mod.rs  standard.rs
src/config/: mod.rs
src/elements/: factory.rs  mod.rs
tests/: backend_tests.rs  source_management.rs
(+4 files in other folders)
