[workspace]
members = [
    "crates/dsl",
    "crates/ds-rs",
    "crates/source-videos",
    "crates/cpuinfer",
]
resolver = "3" # DO NOT CHANGE

[workspace.package]
version = "0.1.0"
edition = "2024" # DO NOT CHANGE
description = "Powerful library to control nVidia DeepStream AI processing framework"

[workspace.dependencies]
gstreamer = "0.24.1"
gstreamer-app = "0.24.0"
gstreamer-base = "0.24.0"
gstreamer-video = "0.24.1"
rand = "0.8" # keep this 0.8
