[package]
name = "cpuinfer"
version.workspace = true
edition.workspace = true
description.workspace = true

[features]
default = ["onnx"]  # Default to ONNX, but can be disabled
onnx = ["dep:ort", "half", "dep:ndarray"]
# opencv-dnn = ["dep:opencv"]
# tflite = ["dep:tflite"]
static = []
capi = []
half = ["dep:half"]
darknet = ["dep:darknet"]
ort = ["dep:ort"]

[lib]
name = "gstcpuinfer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
darknet = { version = "0.4.0", optional = true }
gstreamer.workspace = true
gstreamer-base.workspace = true
gstreamer-video.workspace = true
half = { version = "2.6.0", optional = true }
image = "0.25.6"
ndarray = { version = "0.15.6", optional = true } # Version required for ONNX support
once_cell = "1.21.3"
# opencv = { version = "0.95", default-features = false, features = ["dnn", "imgproc"], optional = true }
ort = { version = "1.16.3", features = ["half"], optional = true }
# tflite = { version = "0.9", optional = true } # TensorFlow Lite support (lightweight alternative)
thiserror = "2.0.16"


[build-dependencies]
gst-plugin-version-helper = "0.8.3"
