[package]
name = "ds-rs"
version = "0.1.0" # TODO: use the workspace version
edition = "2024" # TODO: use the workspace edition
description = "Powerful library to control nVidia DeepStream AI processing framework"

[features]
default = ["std"]
std = []
logging = ["gstreamer/log"]
serde = ["gstreamer/serde"]
gst_v1_16 = ["gstreamer/v1_16"]
gst_v1_18 = ["gstreamer/v1_18"]
gst_v1_20 = ["gstreamer/v1_20"]
gst_v1_22 = ["gstreamer/v1_22"]
gst_v1_24 = ["gstreamer/v1_24"]
gst_v1_26 = ["gstreamer/v1_26"]
gst_v1_28 = ["gstreamer/v1_28"]
opencv = ["dep:opencv"]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]
ort = ["dep:ort"]
imgproc = ["dep:imgproc"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-video.workspace = true
image = "0.25"
imgproc = { version = "0.3.12", optional = true }
log = "0.4.27"
nalgebra = { version = "0.34.0", optional = true }
ndarray = { version = "0.15.6", optional = true }
once_cell = "1.21.3"
opencv = { version = "0.95.1", optional = true }
ort = { version = "1.16.3", optional = true }
rand.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] } # TODO: we should not use tokio (async is ok though)
toml = "0.9.5"

[[bin]]
name = "ds-app"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["wincon", "processthreadsapi", "handleapi", "winnt"] }
