[package]
name = "source-videos"
version.workspace = true
edition.workspace = true
description = "Dynamic video source generation infrastructure for testing ds-rs"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
clap_complete = "4.5.57"
async-trait = "0.1.89"
dirs = "6.0.0"
colored = "3.0.0"
comfy-table = "7.1.4"
env_logger = "0.11.8"
glob = "0.3.3"
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-rtsp = "0.24.0"
gstreamer-rtsp-server = "0.24.1"
log = "0.4.27"
mime_guess = "2.0.5"
notify = { version = "8.2.0", default-features = false, features = ["mio", "fsevent-sys", "crossbeam-channel", "flume"] }
once_cell = "1.21.3"
rand = { workspace = true }
regex = "1.11.2"
rustyline = "17.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] } # TODO: we should not use tokio (async is ok though)
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
uuid = { version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
cpuinfer = { version = "0.1.0", path = "../cpuinfer" }

[dev-dependencies]
axum-test = "18.0.1"
tempfile = "3.21.0"
tokio-test = "0.4.4"

[[bin]]
name = "video-source"
path = "src/main.rs"
